--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "nodemailer": "^6.8.0",
+    "react-scripts": "^2.1.3",
     "react-typical": "^0.1.3"
   },
   "author": "",
