--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemailer": "^6.8.0",
-    "react-scripts": "^5.0.1",
-    "react-typical": "^0.1.3"
+    "nodemailer": "^6.8.0"
   },
   "author": "",
   "license": "ISC",
