--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "dev": "concurrently \"npm run  server\" \"npm run client\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
