--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "npm": "8.19.3"
   },
   "dependencies": {
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "concurrently": "^8.2.2"
   },
   "author": "",
   "license": "ISC",
